--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
 
     <h1>This is my new site yayyy</h1>
+    <h3>here's a level 3 heading</h3>
     <p>Look at this paragraph</p>
     <br>
     <p>Look at this other paragraph</p>
