--- a/Code/index.html
+++ b/Code/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/code/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Page Title</title>
   </head>
   <body>
 
-    <h1>This is my new site yayyy</h1>
+    <h1 style="color:blue;">This is my new site yayyy</h1>
     <h3>here's a level 3 heading</h3>
     <p>Look at this paragraph</p>
     <br>
