--- a/Code/index.html
+++ b/Code/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <h1 style="color:blue;">This is my new site yayyy</h1>
+    <h1>This is my new site yayyy</h1>
     <h3>here's a level 3 heading</h3>
     <p>Look at this paragraph</p>
     <br>
