--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>Look at this paragraph</p>
     <br>
     <p>Look at this other paragraph</p>
+    <br>
+    <p>And another paragraph!</p>
 
   </body>
 </html>
